IE star area covering eveyrthing bug fix

--- a/style/BusGame.css
+++ b/style/BusGame.css
@@ -383,6 +383,11 @@ header #score span {
     border-radius: 15px;
 }
 
+.window .star.hidden
+{
+    display: none;
+}
+
 .window span,
 .window video,
 .window div {
